Fix to fixed navbar overlapping site content

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,7 +1,3 @@
-section div.fix {
-    height: 64px;
-}
-
 .scrollspy {
     position: relative;
 }
